Fix data DTO LONG